teslamate/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: teslamate
  name: teslamate
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 4000
      targetPort: 4000
  selector:
    app: teslamate
