teslamate/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate
  annotations:
    cert-manager.io/cluster-issuer: zerossl-prod
    external-dns.alpha.kubernetes.io/target: ip.nidr0x.win
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-oauth-auth-redirect@kubernetescrd
spec:
  rules:
    - host: tesla.nidr0x.win
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teslamate
                port:
                  name: http
  tls:
    - hosts:
        - "*.nidr0x.win"
      secretName: zerossl-prod
